--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 @import url(css/reset.css);
 @import url(css/stylesheet.css);
 </style>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-53058636-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <!-- Author: Kate Dramstad | Updated: 7/11/2014 -->
 <body>
